# grace-devel

./: .gitignore  Makefile  README.md  api-notes-intersect.cu  api-notes-traversal.cu  cudaErrorCheck.h  error.h  leaf_sizes.py  myf03.f90  nodes.h  particle.h  ray.F90  ray.h  ray_float.F90  ray_intersection.cpp  ray_intersection.h  ray_intersection_float.cpp  ray_intersection_float.h  ray_intersection_gpu.cu  ray_intersection_gpu_float.cu  ray_slope.cpp  ray_test.F90  ray_test_float.F90  slope.cpp  utils.cuh
RayVectorGeneration/src/: Makefile  generateRays.c
device/: build_functors.cuh  interpolation.cuh  loadstore.cuh  morton.cuh  trace_functors.cuh
include/grace/: aabb.h  aligned_allocator.h  aligned_malloc.h  boundedptr.h  bvh.h  config.h  error.h  execution_tag.h  meta.h  morton.h  ray.h  sphere.h  types.h  vector.h
karras-tree/: Nodes.py  bits.py  builder.py  debug_cuda_builder.py  debug_cuda_trace.py  hitdata.txt  morton_keys.py  raydata.txt  spheredata.txt  test_builder.py  test_morton_keys.py  test_short_builder.py  test_trace.py  trace.py
karras-tree-CUDA/: BinaryRadixTree.cpp  BinaryRadixTree.cu  BinaryRadixTree.h  Nodes.cpp  binary_radix_tree.cpp  binary_radix_tree.hpp  bintree_build.cu  bintree_build.cuh  error.h  ion_particle.h  kernel_config.h  nodes.h  particle.h  ray.h  test_morton_keys.cu  types.h  utils.cuh
karras-tree-CUDA/cuda/: BinaryRadixTree_helper.cu  BinaryRadixTree_kenerls.cu  BinaryRadixTree_kernels.cu  binary_radix_tree_helper.cu  binary_radix_tree_kernels.h  bintree_build_kernels.cuh  bits.cu  morton.cu  morton.cuh
karras-tree-CUDA/device/: aabb.cuh  bits.cuh  build_functors.cuh  interpolation.cuh  intersect.cuh  intrinsics.cuh  loadstore.cuh  morton.cuh  trace_core.cuh  trace_functors.cuh  trace_raydata.cuh  util.cuh
karras-tree-CUDA/kernels/: aabb.cuh  albvh.cuh  bintree_build.cuh  bintree_build_kernels.cu  bintree_build_kernels.cuh  bintree_build_kernels_vector3.cuh  bintree_trace.cuh  bits.cu  bits.cuh  gen_rays.cuh  morton.cu  morton.cuh  morton_vector3.cuh  scan.cuh  sort.cuh  trace_sph.cuh
karras-tree-CUDA/tests/: AABB_speed.cu  Makefile  Makefile.template  benchmarksegscan.cu  bit_prefix_32bit.cu  bit_prefix_64bit.cu  common_prefix_32bit.cu  common_prefix_64bit.cu  curand_normal.cu  curand_uniform.cu  many_quasirandoms.cu  morton_30bit.cu  morton_63bit.cu  morton_kernel_30bit.cu  morton_kernel_63bit.cu  plot_profile.py  profile_many_quasirandoms.cu  profile_project_gadget.cu  profile_trace_gadget.cu  (+47 more)
kernels/: aabb.cuh  albvh.cuh  build_sph.cuh  gen_rays.cuh  trace_sph.cuh
rtgpu-1.0.0/: README
rtgpu-1.0.0/optix/: CMakeLists.txt
rtgpu-1.0.0/optix/lib/rply/: rply.c
rtgpu-1.0.0/optix/lib/s3d++/color/: cast.h  compositing.h  coords.hpp  hsv.hpp  rgb.h  util.h  yiq.hpp
rtgpu-1.0.0/optix/lib/s3d++/image/: CMakeLists.txt  convolution.cpp  convolution.h  large_image.hpp  operators.hpp  packed_image.h  params.h
rtgpu-1.0.0/optix/lib/s3d++/image/format/: bitmap.h  format.h  jpeg.cpp  kro.h  util.h
rtgpu-1.0.0/optix/lib/s3d++/math/: affine_transform.hpp  box.h  box.hpp  cone.h  coords.h  fwd.h  interpol.h  interpol.hpp  linear_transform.h  operators.h  plane.hpp  proj_transform.h  ray.hpp  real.h  size.hpp  traits.h  unit_vector.h
rtgpu-1.0.0/optix/lib/s3d++/math/r2/: param_coord.h  ray.h  region.h  rotation.h  rotation.hpp  size.h
rtgpu-1.0.0/optix/lib/s3d++/math/r3/: affine_transform.h  axis_angle.h  axis_angle.hpp  euler.hpp  euler_space.h  frustum.h  param_coord.h  ray.h  rotation.hpp  size.h  spherical.h
rtgpu-1.0.0/optix/lib/s3d++/math/r4/: box.h  point.h  quaternion_space.h
rtgpu-1.0.0/optix/lib/s3d++/mesh/: face.h  face.hpp  face_view.h  fwd.h  mesh.hpp  triangle.cpp  triangle_adjacency.h
rtgpu-1.0.0/optix/lib/s3d++/mpl/: at.h  bool.h  equal.h  mpl.h  sub.h
rtgpu-1.0.0/optix/lib/s3d++/util/: CMakeLists.txt  any.h  arity.h  demangle.h  external_pch.h  fps.cpp  fps.h  gcc.h  invariants.h  is_call_possible.h  mem_fn.h  pch.h  pointer.h  threaded_queue.hpp  type_traits_fwd.h
rtgpu-1.0.0/optix/src/: CMakeLists.txt  canvas.cpp  canvas.h  cone.h  context.h  gui.fl  light.h  main.cpp  material.h  matte.cu  model.h  pch.h  shade.h  sphere.cu  util.cpp  util.h
rtgpu-1.0.0/soft_shadows/src/: CMakeLists.txt  alloc.cpp  alloc.h  bvh.h  canvas.cpp  canvas.h  cone.h  cuda_util.cu  dvector.h  flat_shading.cu  frustum.h  light.h  local_intersections.cu  local_intersections.h  metal.cu  model.cpp  model.h  packet_decomposition.h  pch.h  plastic.cu  ray.h  raytrace.cu  sphere.cu  sponza.ply  symbol.h  traversal.cu  util.h
tests/: Makefile  Makefile.common  Makefile.config.example  morton_30bit.cu  morton_kernel_30bit.cu  profile_leafbuilders.py  profile_trace_gadget_centre.cu  trace_gadget_hproj.cu  zip_sort.cu
util/: bound_iter.cuh  meta.h  texref_iter.cuh
(+599 files in other folders)
